--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,14 @@ jobs:
           aws-region: us-east-1
 
       - name: Set up kubectl
-        uses: aws-actions/eks-kubectl-action@v1
+        uses: aws-actions/amazon-eks-kubectl-action@v1
         with:
           cluster-name: mi-cluster
           region: us-east-1
+
+      - name: Verify kubectl connection
+        run: |
+          kubectl get svc   # Esto verifica que kubectl puede acceder al servicio de Kubernetes
 
       - name: Deploy to EKS
         run: |
